syntax = "proto3";

package peerbeam.transfer;

option go_package = "github.com/ksp237/peerbeam/proto/compiled/transferpb";


message FileBlock {
  string transfer_id = 1;
  bytes data = 2;
  bool is_last_block = 3;
}

message TransferComplete {
  string transfer_id = 1;
  bool success = 2;
  string message = 3;
}

